Delete merged away segments in async flow
Signed-off-by: Sachin Kale <kalsac@amazon.com>